--- a/site/media/css/start-style.css
+++ b/site/media/css/start-style.css
@@ -1,3 +1,63 @@
+/*! updated 2016-12-28 */
+@font-face {
+  font-family: 'Open Sans Light';
+  font-weight: normal;
+  font-style: normal;
+  src: url('/media/fonts/opensans-light.woff2') format('woff2'), url('/media/fonts/opensans-light.woff') format('woff');
+}
+@font-face {
+  font-family: 'Open Sans Light';
+  font-weight: bold;
+  font-style: normal;
+  src: url('/media/fonts/opensans-semibold.woff2') format('woff2'), url('/media/fonts/opensans-semibold.woff') format('woff');
+}
+@font-face {
+  font-family: 'Open Sans Light';
+  font-weight: normal;
+  font-style: italic;
+  src: url('/media/fonts/opensans-lightitalic.woff2') format('woff2'), url('/media/fonts/opensans-lightitalic.woff') format('woff');
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-weight: normal;
+  font-style: normal;
+  src: url('/media/fonts/opensans-regular.woff2') format('woff2'), url('/media/fonts/opensans-regular.woff') format('woff');
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-weight: bold;
+  font-style: normal;
+  src: url('/media/fonts/opensans-bold.woff2') format('woff2'), url('/media/fonts/opensans-bold.woff') format('woff');
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-weight: normal;
+  font-style: italic;
+  src: url('/media/fonts/opensans-italic.woff2') format('woff2'), url('/media/fonts/opensans-italic.woff') format('woff');
+}
+/*
+ * The list above should be minimized to reduce the number of downloaded fonts.
+ * If you'd like to use one of the following font faces on a specific page, just
+ * copy it to the LESS file of that page:
+
+@font-face {
+    font-family: 'Open Sans';
+    font-weight: bold;
+    font-style: italic;
+    src: url('/media/fonts/opensans-bolditalic.woff2') format('woff2'),
+         url('/media/fonts/opensans-bolditalic.woff') format('woff');
+}
+
+@font-face {
+    font-family: 'Open Sans Extrabold';
+    font-weight: 800;
+    font-style: italic;
+    src: url('/media/fonts/opensans-extrabolditalic.woff2') format('woff2'),
+         url('/media/fonts/opensans-extrabolditalic.woff') format('woff');
+}
+
+ */
+
 /****************************************************************************/
 /****************************************************************************/
 html {
@@ -25,7 +85,6 @@ h2 {
   margin: 0;
   font-family: 'Open Sans Light', X-LocaleSpecific-Light, 'Open Sans', X-LocaleSpecific, sans-serif;
   font-weight: normal;
-  font-weight: 400;
 }
 main {
   position: relative;
