--- a/thunderbird.net/media/css/responsive-bundle.css
+++ b/thunderbird.net/media/css/responsive-bundle.css
@@ -2430,3 +2430,658 @@ nav.menu-bar ul li:first-child a {
   display: none;
 }
 /* }}} */
+
+/* This Source Code Form is subject to the terms of the Mozilla Public
+* License, v. 2.0. If a copy of the MPL was not distributed with this
+* file, You can obtain one at http://mozilla.org/MPL/2.0/. */
+/****************************************************************************/
+/****************************************************************************/
+/* -------------------------------------------------------------------------- */
+.moz-global-nav {
+  background: #fff;
+  margin: 0 auto;
+  max-width: 1420px;
+  overflow: hidden;
+  position: relative;
+}
+.moz-global-nav a:link,
+.moz-global-nav a:visited {
+  color: #000;
+  font-weight: bold;
+  text-decoration: none;
+}
+.moz-global-nav a:hover,
+.moz-global-nav a:focus,
+.moz-global-nav a:active {
+  color: #000;
+  text-decoration: underline;
+  transition: color 0.1s ease-in-out;
+}
+.moz-global-nav .nav-button-menu {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  float: left;
+  font-size: 0;
+  height: 25px;
+  margin: 13px 0;
+  padding: 0;
+  width: 50px;
+}
+.moz-global-nav .nav-button-menu .p1,
+.moz-global-nav .nav-button-menu .p2,
+.moz-global-nav .nav-button-menu .p3 {
+  transition: transform 0.2s ease-in-out;
+}
+.moz-global-nav .nav-button-menu:hover .p1,
+.moz-global-nav .nav-button-menu:active .p1 {
+  transform: translateX(4px);
+}
+.moz-global-nav .nav-button-menu:hover .p2,
+.moz-global-nav .nav-button-menu:active .p2 {
+  transform: translateX(-3px);
+}
+.moz-global-nav .nav-button-menu:hover .p3,
+.moz-global-nav .nav-button-menu:active .p3 {
+  transform: translateX(4px);
+}
+.moz-global-nav .nav-button-menu:focus {
+  outline: none;
+}
+.moz-global-nav .nav-button-menu:focus .p1,
+.moz-global-nav .nav-button-menu:focus .p2,
+.moz-global-nav .nav-button-menu:focus .p3 {
+  fill: #646464;
+}
+.moz-global-nav .nav-button-menu::-moz-focus-inner {
+  border: none;
+}
+.moz-global-nav .nav-button-menu.nav-hidden {
+  display: none;
+}
+.moz-global-nav .nav-logo {
+  font-size: 15px;
+  font-size: 0.9375rem;
+  float: left;
+  height: 25px;
+  margin: 0 0 0 17px;
+  padding: 13px 0;
+}
+.moz-global-nav .nav-logo a {
+  text-indent: 120%;
+  white-space: nowrap;
+  overflow: hidden;
+  background: url('/media/img/pebbles/moz-wordmark-dark-reverse.svg') top left no-repeat;
+  display: block;
+  width: 78px;
+  height: 25px;
+}
+@media only screen and (max-width: 1140px) {
+  .moz-global-nav .nav-logo {
+    margin-left: 5px;
+  }
+  .moz-global-nav .nav-logo a {
+    -webkit-background-size: 25px 25px;
+    background-size: 25px 25px;
+    background-image: url('/media/img/favicon/favicon-196x196.png');
+    width: 25px;
+  }
+}
+.moz-global-nav .nav-horizontal-menu {
+  zoom: 1;
+  margin-left: 17px;
+  padding: 25px 0 10px;
+  position: relative;
+  overflow: hidden;
+}
+.moz-global-nav .nav-horizontal-menu:after {
+  display: block;
+  visibility: hidden;
+  height: 0;
+  clear: both;
+  content: ".";
+}
+@media only screen and (max-width: 860px) {
+  .moz-global-nav .nav-horizontal-menu {
+    padding-top: 10px;
+  }
+}
+@media only screen and (max-width: 1140px) {
+  .moz-global-nav .nav-horizontal-menu {
+    margin-left: 5px;
+  }
+}
+.moz-global-nav .nav-primary-links {
+  font-size: 16px;
+  font-size: 1rem;
+  display: block;
+  float: left;
+  list-style-type: none;
+  margin: 0 0 0 21px;
+  padding: 13px 0;
+}
+.moz-global-nav .nav-primary-links > li {
+  display: inline-block;
+  padding: 0 21px;
+  margin: 0;
+}
+.moz-global-nav .nav-primary-links > li a:hover,
+.moz-global-nav .nav-primary-links > li a:active,
+.moz-global-nav .nav-primary-links > li a:focus {
+  text-decoration: none;
+}
+.moz-global-nav .nav-primary-links > li a:focus {
+  outline: none;
+}
+@media only screen and (max-width: 1140px) {
+  .moz-global-nav .nav-primary-links {
+    margin-left: 10px;
+  }
+  .moz-global-nav .nav-primary-links > li {
+    padding: 0 6px;
+  }
+}
+@media only screen and (max-width: 860px) {
+  .moz-global-nav .nav-primary-links {
+    display: none;
+  }
+}
+.moz-global-nav.simple .nav-primary-links {
+  display: block;
+}
+.moz-nav-open .moz-global-nav .nav-button-menu .p1 {
+  transform: translateX(4px);
+}
+.moz-nav-open .moz-global-nav .nav-button-menu .p2 {
+  transform: translateX(-3px);
+}
+.moz-nav-open .moz-global-nav .nav-button-menu .p3 {
+  transform: translateX(4px);
+}
+/* -------------------------------------------------------------------------- */
+.moz-global-nav-drawer {
+  background: #000;
+  bottom: 0;
+  color: #fff;
+  left: -320px;
+  padding: 20px;
+  position: absolute;
+  top: 0;
+  width: 280px;
+  z-index: 1000;
+}
+.moz-global-nav-drawer a:link,
+.moz-global-nav-drawer a:visited {
+  transition: color 0.1s ease-in-out;
+  color: #fff;
+  text-decoration: none;
+}
+.moz-global-nav-drawer a:hover,
+.moz-global-nav-drawer a:active,
+.moz-global-nav-drawer a:focus {
+  transition: color 0.1s ease-in-out;
+}
+.moz-global-nav-drawer a:focus {
+  outline: none;
+}
+.moz-global-nav-drawer abbr[title] {
+  text-decoration: none;
+}
+.moz-global-nav-drawer .nav-drawer-close-button {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  font-size: 13px;
+  font-size: 0.8125rem;
+  background-color: #000;
+  border: none;
+  cursor: pointer;
+  height: 22px;
+  margin: 30px 0 0 22px;
+  padding: 0;
+  text-transform: uppercase;
+}
+.moz-global-nav-drawer .nav-drawer-close-button .rect {
+  transform-origin: center center;
+  transition: transform 0.12s ease-in-out;
+  transform: translate(0, 0) rotate(45deg);
+}
+.moz-global-nav-drawer .nav-drawer-close-button .center {
+  transform: rotate(45deg);
+}
+.moz-global-nav-drawer .nav-drawer-close-button:hover .top-left,
+.moz-global-nav-drawer .nav-drawer-close-button:active .top-left,
+.moz-global-nav-drawer .nav-drawer-close-button:focus .top-left {
+  transform: translate(-7px, -7px) rotate(45deg);
+}
+.moz-global-nav-drawer .nav-drawer-close-button:hover .top-right,
+.moz-global-nav-drawer .nav-drawer-close-button:active .top-right,
+.moz-global-nav-drawer .nav-drawer-close-button:focus .top-right {
+  transform: translate(7px, -7px) rotate(45deg);
+}
+.moz-global-nav-drawer .nav-drawer-close-button:hover .bottom-left,
+.moz-global-nav-drawer .nav-drawer-close-button:active .bottom-left,
+.moz-global-nav-drawer .nav-drawer-close-button:focus .bottom-left {
+  transform: translate(-7px, 7px) rotate(45deg);
+}
+.moz-global-nav-drawer .nav-drawer-close-button:hover .bottom-right,
+.moz-global-nav-drawer .nav-drawer-close-button:active .bottom-right,
+.moz-global-nav-drawer .nav-drawer-close-button:focus .bottom-right {
+  transform: translate(7px, 7px) rotate(45deg);
+}
+@media only screen and (max-width: 1140px) {
+  .moz-global-nav-drawer .nav-drawer-close-button .rect {
+    transition: none;
+  }
+  .moz-global-nav-drawer .nav-drawer-close-button .top-left {
+    transform: translate(-7px, -7px) rotate(45deg);
+  }
+  .moz-global-nav-drawer .nav-drawer-close-button .top-right {
+    transform: translate(7px, -7px) rotate(45deg);
+  }
+  .moz-global-nav-drawer .nav-drawer-close-button .bottom-left {
+    transform: translate(-7px, 7px) rotate(45deg);
+  }
+  .moz-global-nav-drawer .nav-drawer-close-button .bottom-right {
+    transform: translate(7px, 7px) rotate(45deg);
+  }
+}
+.moz-global-nav-drawer .nav-drawer-close-button:focus {
+  outline: none;
+}
+.moz-global-nav-drawer .nav-drawer-close-button::-moz-focus-inner {
+  border: none;
+}
+.moz-global-nav-drawer .nav-menu-inner-container {
+  margin-top: 42px;
+  position: relative;
+}
+.moz-global-nav-drawer .nav-menu-scroll-pane {
+  padding: 0 22px;
+  width: 234px;
+}
+.moz-global-nav-drawer .nav-menu-primary-links {
+  padding-bottom: 40px;
+  list-style-type: none;
+}
+.moz-global-nav-drawer .nav-menu-primary-links > li {
+  margin: 20px 0;
+}
+.moz-global-nav-drawer .intro {
+  font-size: 13px;
+  font-size: 0.8125rem;
+  margin: 0 0 20px;
+}
+.moz-global-nav-drawer .summary {
+  font-size: 18px;
+  font-size: 1.125rem;
+  padding-bottom: 20px;
+  text-shadow: none;
+  font-weight: bold;
+}
+.moz-global-nav-drawer .summary a:link,
+.moz-global-nav-drawer .summary a:visited {
+  position: relative;
+  display: block;
+}
+.moz-global-nav-drawer .summary a:link:after,
+.moz-global-nav-drawer .summary a:visited:after {
+  background-image: url('/media/img/nav/subnav-expand.svg');
+  content: '';
+  height: 12px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: transform 0.2s ease-in-out;
+  width: 12px;
+}
+.moz-global-nav-drawer .summary.selected a:link:after,
+.moz-global-nav-drawer .summary.selected a:visited:after {
+  transform: rotate(45deg);
+}
+.moz-global-nav-drawer .detail-container {
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  padding-top: 20px;
+}
+.moz-global-nav-drawer .nav-menu-secondary-links > li {
+  font-size: 16px;
+  font-size: 1rem;
+  margin: 20px 0;
+}
+.moz-global-nav-drawer .nav-menu-secondary-links > li a:link,
+.moz-global-nav-drawer .nav-menu-secondary-links > li a:visited {
+  display: block;
+}
+/* -------------------------------------------------------------------------- */
+.moz-global-nav .item-firefox a:hover,
+.moz-global-nav-drawer .item-firefox a:hover,
+.moz-global-nav .item-firefox a:active,
+.moz-global-nav-drawer .item-firefox a:active,
+.moz-global-nav .item-firefox a:focus,
+.moz-global-nav-drawer .item-firefox a:focus,
+.moz-global-nav .item-firefox a.selected,
+.moz-global-nav-drawer .item-firefox a.selected {
+  color: #ff9500;
+}
+.moz-global-nav .item-internet-health a:hover,
+.moz-global-nav-drawer .item-internet-health a:hover,
+.moz-global-nav .item-internet-health a:active,
+.moz-global-nav-drawer .item-internet-health a:active,
+.moz-global-nav .item-internet-health a:focus,
+.moz-global-nav-drawer .item-internet-health a:focus,
+.moz-global-nav .item-internet-health a.selected,
+.moz-global-nav-drawer .item-internet-health a.selected {
+  color: #4eb5e6;
+}
+.moz-global-nav .item-technology a:hover,
+.moz-global-nav-drawer .item-technology a:hover,
+.moz-global-nav .item-technology a:active,
+.moz-global-nav-drawer .item-technology a:active,
+.moz-global-nav .item-technology a:focus,
+.moz-global-nav-drawer .item-technology a:focus,
+.moz-global-nav .item-technology a.selected,
+.moz-global-nav-drawer .item-technology a.selected {
+  color: #b0b2e9;
+}
+.moz-global-nav .item-about-us a:hover,
+.moz-global-nav-drawer .item-about-us a:hover,
+.moz-global-nav .item-about-us a:active,
+.moz-global-nav-drawer .item-about-us a:active,
+.moz-global-nav .item-about-us a:focus,
+.moz-global-nav-drawer .item-about-us a:focus,
+.moz-global-nav .item-about-us a.selected,
+.moz-global-nav-drawer .item-about-us a.selected {
+  color: #b6d806;
+}
+.moz-global-nav .item-get-involved a:hover,
+.moz-global-nav-drawer .item-get-involved a:hover,
+.moz-global-nav .item-get-involved a:active,
+.moz-global-nav-drawer .item-get-involved a:active,
+.moz-global-nav .item-get-involved a:focus,
+.moz-global-nav-drawer .item-get-involved a:focus,
+.moz-global-nav .item-get-involved a.selected,
+.moz-global-nav-drawer .item-get-involved a.selected {
+  color: #ff8385;
+}
+body[data-global-nav-current-link="firefox"] .nav-primary-links .item-firefox > a:link,
+body[data-global-nav-current-link="firefox"] .nav-primary-links .item-firefox > a:visited {
+  color: #ff9500;
+}
+body[data-global-nav-current-link="internet-health"] .item-internet-health > a:link,
+body[data-global-nav-current-link="internet-health"] .item-internet-health > a:visited {
+  color: #4eb5e6;
+}
+body[data-global-nav-current-link="technology"] .item-technology > a:link,
+body[data-global-nav-current-link="technology"] .item-technology > a:visited {
+  color: #b0b2e9;
+}
+body[data-global-nav-current-link="about-us"] .item-about-us > a:link,
+body[data-global-nav-current-link="about-us"] .item-about-us > a:visited {
+  color: #b6d806;
+}
+body[data-global-nav-current-link="get-involved"] .item-get-involved > a:link,
+body[data-global-nav-current-link="get-involved"] .item-get-involved > a:visited {
+  color: #ff8385;
+}
+/* -------------------------------------------------------------------------- */
+.moz-global-nav-page-mask {
+  background: #000;
+  bottom: auto;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  right: auto;
+  top: 0;
+  transition: opacity 0.2s ease-in-out;
+  z-index: 10000;
+}
+html.moz-nav-open .moz-global-nav-page-mask {
+  bottom: 0;
+  opacity: 0.3;
+  right: 0;
+  transition: opacity 0.2s ease-in-out;
+}
+/* -------------------------------------------------------------------------- */
+#global-nav-download-firefox {
+  float: right;
+  margin: -2px 85px 0 0;
+}
+#global-nav-download-firefox .download-list {
+  margin: 0;
+}
+#global-nav-download-firefox .download-list > li {
+  margin: 0;
+}
+#global-nav-download-firefox .download-link:link,
+#global-nav-download-firefox .download-link:visited {
+  font-size: 14px;
+  font-size: 0.875rem;
+  background: inherit;
+  border-radius: 0;
+  border: none;
+  color: #646464;
+  display: inline-block;
+  padding: 14px 10px;
+  text-decoration: none;
+  transition: color 0.1s ease-in-out, background-color 0.1s ease-in-out;
+}
+#global-nav-download-firefox .download-link:link .download-title,
+#global-nav-download-firefox .download-link:visited .download-title {
+  font-weight: bold;
+}
+#global-nav-download-firefox .download-link:link .download-title:before,
+#global-nav-download-firefox .download-link:visited .download-title:before {
+  font-size: 16px;
+  font-size: 1rem;
+  color: #ff9500;
+  content: "\2193\00A0";
+  transition: color 0.1s ease-in-out;
+  white-space: nowrap;
+}
+#global-nav-download-firefox .download-link:link:hover,
+#global-nav-download-firefox .download-link:visited:hover,
+#global-nav-download-firefox .download-link:link:focus,
+#global-nav-download-firefox .download-link:visited:focus,
+#global-nav-download-firefox .download-link:link:active,
+#global-nav-download-firefox .download-link:visited:active {
+  background-color: #ff9500;
+  color: #fff;
+  transition: color 0.1s ease-in-out, background-color 0.1s ease-in-out;
+}
+#global-nav-download-firefox .download-link:link:hover .download-title:before,
+#global-nav-download-firefox .download-link:visited:hover .download-title:before,
+#global-nav-download-firefox .download-link:link:focus .download-title:before,
+#global-nav-download-firefox .download-link:visited:focus .download-title:before,
+#global-nav-download-firefox .download-link:link:active .download-title:before,
+#global-nav-download-firefox .download-link:visited:active .download-title:before {
+  color: #fff;
+  transition: color 0.1s ease-in-out;
+}
+@media only screen and (max-width: 1140px) {
+  #global-nav-download-firefox {
+    margin-right: 60px;
+  }
+  #global-nav-download-firefox .download-link:link,
+  #global-nav-download-firefox .download-link:visited {
+    padding: 14px 10px;
+  }
+}
+@media only screen and (max-width: 860px) {
+  #global-nav-download-firefox {
+    margin-right: 20px;
+  }
+}
+#global-nav-download-firefox .fx-privacy-link {
+  display: none;
+}
+.other #global-nav-download-firefox,
+.oldwin #global-nav-download-firefox,
+.oldmac #global-nav-download-firefox {
+  display: none;
+}
+/* -------------------------------------------------------------------------- */
+.moz-global-nav-drawer .detail {
+  display: none;
+}
+.moz-global-nav-drawer .summary.selected + .detail {
+  display: block;
+}
+@supports (transition: max-height .6s ease-in-out, visibility 0s 0s) {
+  .moz-global-nav-drawer .detail {
+    display: block;
+    max-height: 0;
+    overflow: hidden;
+    visibility: hidden;
+    transition: max-height 0.3s ease-in-out, visibility 0s 0.8s;
+  }
+  .moz-global-nav-drawer .summary.selected + .detail {
+    max-height: 1000px;
+    visibility: visible;
+    transition: max-height 0.6s ease-in-out, visibility 0s 0s;
+  }
+}
+body {
+  overflow-x: hidden;
+}
+html.moz-nav-open body {
+  left: 320px;
+  position: relative;
+}
+@supports (transform: translateX(320px)) {
+  body {
+    position: static;
+    transition: transform 0.25s ease-in-out;
+  }
+  html.moz-nav-open {
+    height: 100%;
+  }
+  html.moz-nav-open body {
+    height: 100%;
+    left: 0;
+    overflow: hidden;
+    transform: translateX(320px);
+    transition: transform 0.25s ease-in-out;
+  }
+  html.moz-nav-open .moz-global-nav-drawer {
+    transition: visibility 0s 0s;
+    visibility: visible;
+  }
+  .moz-global-nav-drawer {
+    bottom: auto;
+    height: 100%;
+    left: 0;
+    transform: translateX(-320px);
+    transition: visibility 0s .4s;
+    visibility: hidden;
+  }
+  .moz-global-nav-drawer .nav-menu-inner-container {
+    margin-top: 22px;
+    height: 100%;
+  }
+  .moz-global-nav-drawer .nav-menu-scroll-pane {
+    bottom: 100px;
+    overflow-y: scroll;
+    position: absolute;
+    top: 0;
+    width: 254px;
+  }
+  .moz-global-nav-drawer .nav-menu-scroll-pane::-webkit-scrollbar {
+    width: 8px;
+    height: 100%;
+  }
+  .moz-global-nav-drawer .nav-menu-scroll-pane::-webkit-scrollbar-track {
+    background: #000;
+  }
+  .moz-global-nav-drawer .nav-menu-scroll-pane::-webkit-scrollbar-thumb {
+    width: 8px;
+    height: 8px;
+    background: #999;
+    border-radius: 8px;
+  }
+  .moz-global-nav-drawer .nav-menu-primary-links {
+    padding-right: 20px;
+  }
+  @media only screen and (max-width: 1140px) {
+    html.moz-nav-open {
+      height: auto;
+    }
+    html.moz-nav-open body {
+      height: auto;
+      overflow-x: hidden;
+      overflow-y: initial;
+    }
+    .moz-global-nav-drawer {
+      bottom: 0;
+      height: auto;
+    }
+    .moz-global-nav-drawer .nav-menu-inner-container {
+      height: auto;
+    }
+    .moz-global-nav-drawer .nav-menu-scroll-pane {
+      position: static;
+      overflow-y: visible;
+      width: 234px;
+    }
+    .moz-global-nav-drawer .nav-menu-primary-links {
+      padding-right: 0;
+    }
+  }
+}
+/* -------------------------------------------------------------------------- */
+.moz-global-nav-drawer .nav-promo {
+  text-align: center;
+  width: 216px;
+}
+.moz-global-nav-drawer .nav-promo .thumbnail {
+  border: 1px solid #fff;
+  display: block;
+  height: 146px;
+  margin-bottom: 20px;
+  padding: 5px 0 20px;
+  position: relative;
+  width: 214px;
+}
+.moz-global-nav-drawer .nav-promo img {
+  display: inline;
+  height: auto;
+  max-width: 100%;
+}
+.moz-global-nav-drawer .nav-promo figcaption {
+  font-size: 14px;
+  font-size: 0.875rem;
+  background-color: #000;
+  bottom: 0;
+  color: inherit;
+  left: 0;
+  line-height: 1.3;
+  margin: 0;
+  padding: 5px;
+  position: absolute;
+  text-align: left;
+}
+.moz-global-nav-drawer .nav-promo .meta {
+  font-size: 12px;
+  font-size: 0.75rem;
+  color: #fff;
+  display: block;
+  padding: 0 0 5px 5px;
+  text-align: left;
+}
+@media only screen and (max-width: 860px) {
+  .moz-global-nav-drawer .nav-promo {
+    display: none;
+  }
+}
+/* -------------------------------------------------------------------------- */
+.no-js #global-nav-download-firefox {
+  display: none;
+}
+.no-js .nav-primary-links {
+  display: block;
+}
+.no-js .moz-global-nav-drawer {
+  display: none;
+}
