--- a/media/css/new-start-style.css
+++ b/media/css/new-start-style.css
@@ -66,6 +66,9 @@
   --beta-gradient: linear-gradient(-270deg, #E217B6, #BD058A);
   --logo-wireframe: url('/media/svg/logo-wireframe-light.svg');
 
+  --list-dot-inner: #B5007F;
+  --list-dot-outer: #FCD2F5;
+
   --text: #333;
   --text-logo: #0a84ff;
   --text-donate: #ff0039;
@@ -86,6 +89,9 @@
 
     --beta-gradient: linear-gradient(-270deg, #FF83EA, #FF1AD9);
     --logo-wireframe: url('/media/svg/logo-wireframe-dark.svg');
+
+    --list-dot-inner: #FFB6F3;
+    --list-dot-outer: #76175B;
 
     --text: #F9F9FA;
     --text-logo: #85C2FF;
@@ -132,22 +138,27 @@ header {
   gap: 2rem;
 }
 
-svg {
-  fill: currentColor;
-  vertical-align: -4px;
-  margin-right: 0.25rem;
-}
-
 .header-top {
   display: grid;
   grid-template-columns: auto 1fr;
   align-items: center;
 }
 
-.logo-img { background-image: url('/media/img/thunderbird/logos/release-100.png'); }
-html[data-channel="earlybird"] .logo-img { background-image: url('/media/img/thunderbird/logos/earlybird-100.png'); }
-html[data-channel="beta"] .logo-img { background-image: url('/media/img/thunderbird/logos/beta.png'); }
-html[data-channel="daily"] .logo-img { background-image: url('/media/img/thunderbird/logos/daily-100.png'); }
+.logo-img {
+  background-image: url('/media/img/thunderbird/logos/release-100.png');
+}
+
+html[data-channel="earlybird"] .logo-img {
+  background-image: url('/media/img/thunderbird/logos/earlybird-100.png');
+}
+
+html[data-channel="beta"] .logo-img {
+  background-image: url('/media/img/thunderbird/logos/beta.png');
+}
+
+html[data-channel="daily"] .logo-img {
+  background-image: url('/media/img/thunderbird/logos/daily-100.png');
+}
 
 .logo-img {
   display: inline-block;
@@ -177,6 +188,7 @@ html[data-channel="daily"] .logo-img { background-image: url('/media/img/thunder
   font-size: 2rem;
   font-weight: 400;
   color: var(--text-logo);
+  line-height: 1;
 }
 
 .beta-text {
@@ -184,6 +196,7 @@ html[data-channel="daily"] .logo-img { background-image: url('/media/img/thunder
   background: var(--beta-gradient);
   background-clip: text;
   text-transform: uppercase;
+  font-size: 1rem;
   font-weight: 600;
 }
 
@@ -195,7 +208,9 @@ html[data-channel="daily"] .logo-img { background-image: url('/media/img/thunder
 }
 
 .donate-btn {
-  display: block;
+  display: inline-flex;
+  align-items: center;
+  gap: 6px;
   text-decoration: none;
   justify-self: end;
   background-color: #ff0039;
@@ -235,13 +250,33 @@ html[data-channel="daily"] .logo-img { background-image: url('/media/img/thunder
 
 .warning-panel ul {
   padding-left: 2.5rem;
+  list-style: none;
+}
+
+.warning-panel ul li {
+  position: relative;
+  margin-left: 10px;
+}
+
+.warning-panel ul li:before {
+  position: absolute;
+  content: '';
+  width: 3px;
+  height: 3px;
+  top: 0.5rem;
+  left: -20px;
+  border-radius: 50%;
+  border: 4px solid var(--list-dot-outer);
+  background: var(--list-dot-inner);
 }
 
 .warning-panel a,
 .main-content a {
   text-decoration: none;
-  position: relative;
   font-weight: 700;
+  display: inline-flex;
+  align-items: center;
+  gap: 3px;
 }
 
 .warning-panel a:hover,
@@ -251,31 +286,55 @@ html[data-channel="daily"] .logo-img { background-image: url('/media/img/thunder
   text-decoration: underline;
 }
 
-.warning-panel a svg,
-.main-content a svg {
-  margin: 0;
-  vertical-align: 2px;
-}
-
 .content-sections {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-
 }
 
-.donate { color: var(--text-donate); }
-.warning { color: var(--text-warning); }
-.connect { color: var(--text-connect); }
-.support { color: var(--text-support); }
-.get-involved { color: var(--text-get-involved); }
-.bug { color: var(--text-bug); }
-.crash { color: var(--text-crash); }
+.section-heading {
+  margin-bottom: 0;
+  display: inline-flex;
+  align-items: center;
+  gap: 6px;
+}
+
+.donate {
+  color: var(--text-donate);
+}
+
+.warning {
+  color: var(--text-warning);
+}
+
+.connect {
+  color: var(--text-connect);
+}
+
+.support {
+  color: var(--text-support);
+}
+
+.get-involved {
+  color: var(--text-get-involved);
+}
+
+.bug {
+  color: var(--text-bug);
+}
+
+.crash {
+  color: var(--text-crash);
+}
 
 @media (max-width: 800px) {
   .main-content {
     grid-template-columns: 1fr;
     gap: 2rem;
+  }
+
+  .beta-thanks {
+    margin-bottom: 0;
   }
 }
 
