--- a/website/_includes/donate-modal.html
+++ b/website/_includes/donate-modal.html
@@ -15,8 +15,8 @@
     <div class="spinner flex justify-center items-center w-full h-full"></div>
   </div>
   <!-- close button for the modal, always visible -->
-  <div id="close-modal" class="absolute p-1 m-2 z-10 pin-t pin-r">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+  <div id="finish-modal" class="absolute p-1 m-2 z-10 pin-t pin-r">
+    <Closens="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
       <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
       <line x1="18" y1="6" x2="6" y2="18" />
       <line x1="6" y1="6" x2="18" y2="18" />
@@ -98,7 +98,6 @@
     <div class="font-lg leading-normal text-center">
       <p class="m-0">{{ _('Donation Amount') }}</p>
     </div>
-    <div id="checkout-message"></div>
     <div id="dropin-container" class="pr-4 pl-4"></div>
     <div class="flex justify-center mt-6 mb-6">
       <button class="btn-body btn-secondary pr-5 mr-2" id="checkout-back">
@@ -114,6 +113,52 @@
           </svg>
         </span>
       </button>
+    </div>
+  </div>
+  <!-- step 3: show payment result message -->
+  <div id="message-container" class="hidden">
+    <div id="donation-success-message" class="hidden">
+      <h1 class="text-blue-dark text-center font-4xl font-light">{{ _('Thank You!') }}</h1>
+      <div class="font-lg pt-0 pl-6 pb-4 pr-6 leading-normal text-center">
+        <p>{{ _('The download starts automatically...') }}</p>
+        <p>{{ _('Your contributing helps to ensure Thunderbird stays free for business and personal use and supports future development.') }}</p>
+      </div>
+      <div class="flex justify-center mt-6 mb-6">
+        <button class="btn-body btn-secondary pr-5 mr-2" id="finish-modal">
+          {{ _('Close') }}
+        </button>
+        <button class="btn-body btn-secondary donation-direct-download">
+          {{ _('Direct Download') }}
+          <span>
+            <svg viewBox="0 0 7 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <g id="UI" stroke="none" stroke-width="1" fill="currentColor" fill-rule="evenodd">
+                <path d="M6.91574413,5.89284986 C6.91574413,5.97767139 6.87333336,6.07309561 6.80971722,6.13671176 L1.86886311,11.0775659 C1.80524696,11.141182 1.70982274,11.1835928 1.62500121,11.1835928 C1.54017968,11.1835928 1.44475546,11.141182 1.38113932,11.0775659 L0.851004755,10.5474313 C0.787388608,10.4838152 0.744977843,10.3989936 0.744977843,10.3035694 C0.744977843,10.2187479 0.787388608,10.1233237 0.851004755,10.0597075 L5.0178624,5.89284986 L0.851004755,1.72599222 C0.787388608,1.66237607 0.744977843,1.56695185 0.744977843,1.48213032 C0.744977843,1.39730879 0.787388608,1.30188457 0.851004755,1.23826842 L1.38113932,0.70813386 C1.44475546,0.644517713 1.54017968,0.602106948 1.62500121,0.602106948 C1.70982274,0.602106948 1.80524696,0.644517713 1.86886311,0.70813386 L6.80971722,5.64898796 C6.87333336,5.71260411 6.91574413,5.80802833 6.91574413,5.89284986 Z"></path>
+              </g>
+            </svg>
+          </span>
+        </button>
+      </div>
+    </div>
+    <div id="donation-error-message" class="hidden">
+      <h1 class="text-blue-dark text-center font-4xl font-light">{{ _('Whoops!?') }}</h1>
+      <div class="font-lg pt-0 pl-6 pb-4 pr-6 leading-normal text-center">
+        <p>{{ _('Something went wrong.') }}</p>
+      </div>
+      <div class="flex justify-center mt-6 mb-6">
+        <button class="btn-body btn-secondary pr-5 mr-2" id="checkout-back">
+          {{ _('Start again') }}
+        </button>
+        <button class="btn-body btn-secondary donation-direct-download">
+          {{ _('Direct Download') }}
+          <span>
+            <svg viewBox="0 0 7 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <g id="UI" stroke="none" stroke-width="1" fill="currentColor" fill-rule="evenodd">
+                <path d="M6.91574413,5.89284986 C6.91574413,5.97767139 6.87333336,6.07309561 6.80971722,6.13671176 L1.86886311,11.0775659 C1.80524696,11.141182 1.70982274,11.1835928 1.62500121,11.1835928 C1.54017968,11.1835928 1.44475546,11.141182 1.38113932,11.0775659 L0.851004755,10.5474313 C0.787388608,10.4838152 0.744977843,10.3989936 0.744977843,10.3035694 C0.744977843,10.2187479 0.787388608,10.1233237 0.851004755,10.0597075 L5.0178624,5.89284986 L0.851004755,1.72599222 C0.787388608,1.66237607 0.744977843,1.56695185 0.744977843,1.48213032 C0.744977843,1.39730879 0.787388608,1.30188457 0.851004755,1.23826842 L1.38113932,0.70813386 C1.44475546,0.644517713 1.54017968,0.602106948 1.62500121,0.602106948 C1.70982274,0.602106948 1.80524696,0.644517713 1.86886311,0.70813386 L6.80971722,5.64898796 C6.87333336,5.71260411 6.91574413,5.80802833 6.91574413,5.89284986 Z"></path>
+              </g>
+            </svg>
+          </span>
+        </button>
+      </div>
     </div>
   </div>
   <footer class="w-4/5 mx-auto border-0 border-t border-solid border-grey-light p-6">
