--- a/website/_includes/donate-modal.html
+++ b/website/_includes/donate-modal.html
@@ -15,8 +15,8 @@
     <div class="spinner flex justify-center items-center w-full h-full"></div>
   </div>
   <!-- close button for the modal, always visible -->
-  <div id="finish-modal" class="absolute p-1 m-2 z-10 pin-t pin-r">
-    <Closens="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+  <div id="close-modal" class="absolute p-1 m-2 z-10 pin-t pin-r donation-click-event">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
       <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
       <line x1="18" y1="6" x2="6" y2="18" />
       <line x1="6" y1="6" x2="18" y2="18" />
@@ -67,7 +67,7 @@
         </div>
       </section>
       <section class="flex justify-center mt-6 mb-6">
-        <button class="btn-body mr-2" id="amount-submit">
+        <button class="btn-body mr-2 donation-click-event" id="amount-submit">
           {{ _('Donate & Download') }}
           <span>
             <svg viewBox="0 0 7 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -77,7 +77,7 @@
             </svg>
           </span>
         </button>
-        <button class="btn-body btn-secondary" id="amount-cancel">
+        <button class="btn-body btn-secondary donation-click-event" id="amount-cancel">
           {{ _('No Thanks, Download Now!') }}
           <span>
             <svg viewBox="0 0 7 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -100,10 +100,10 @@
     </div>
     <div id="dropin-container" class="pr-4 pl-4"></div>
     <div class="flex justify-center mt-6 mb-6">
-      <button class="btn-body btn-secondary pr-5 mr-2" id="checkout-back">
+      <button class="btn-body btn-secondary pr-5 mr-2 donation-click-event" id="checkout-back">
         {{ _('Go Back') }}
       </button>
-      <button class="btn-body" id="checkout-submit">
+      <button class="btn-body donation-click-event" id="checkout-submit">
         {{ _('Submit Payment') }}
         <span>
           <svg viewBox="0 0 7 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -116,7 +116,7 @@
     </div>
   </div>
   <!-- step 3: show payment result message -->
-  <div id="message-container" class="hidden">
+  <div id="result-container" class="hidden">
     <div id="donation-success-message" class="hidden">
       <h1 class="text-blue-dark text-center font-4xl font-light">{{ _('Thank You!') }}</h1>
       <div class="font-lg pt-0 pl-6 pb-4 pr-6 leading-normal text-center">
@@ -124,10 +124,10 @@
         <p>{{ _('Your contributing helps to ensure Thunderbird stays free for business and personal use and supports future development.') }}</p>
       </div>
       <div class="flex justify-center mt-6 mb-6">
-        <button class="btn-body btn-secondary pr-5 mr-2" id="finish-modal">
+        <button class="btn-body btn-secondary pr-5 mr-2 donation-click-event" id="finish-modal">
           {{ _('Close') }}
         </button>
-        <button class="btn-body btn-secondary donation-direct-download">
+        <button class="btn-body donation-direct-download donation-click-event">
           {{ _('Direct Download') }}
           <span>
             <svg viewBox="0 0 7 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -145,10 +145,10 @@
         <p>{{ _('Something went wrong.') }}</p>
       </div>
       <div class="flex justify-center mt-6 mb-6">
-        <button class="btn-body btn-secondary pr-5 mr-2" id="checkout-back">
+        <button class="btn-body btn-secondary pr-5 mr-2 donation-click-event" id="start-again">
           {{ _('Start again') }}
         </button>
-        <button class="btn-body btn-secondary donation-direct-download">
+        <button class="btn-body donation-direct-download donation-click-event">
           {{ _('Direct Download') }}
           <span>
             <svg viewBox="0 0 7 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -187,4 +187,4 @@
   </footer>
 </div>
 
-<div id="modal-overlay" class="fixed pin-t pin-l m-0 p-0 w-full h-full z-20 bg-black opacity-50 hidden" tabindex="-1"></div>
+<div id="modal-overlay" class="fixed pin-t pin-l m-0 p-0 w-full h-full z-20 bg-black opacity-50 hidden donation-click-event" tabindex="-1"></div>
